--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -12,6 +12,8 @@
     background-color:rgb(243,242,242);
     display: flex;
     align-items: center;
+    position: sticky;
+    z-index: 2;
 }
 
 .p-circle {
@@ -22,3 +24,19 @@
     background-color: white;
 
 }
+
+.p-image {
+    width: 100%;
+    transition: all 10s ease;
+}
+
+.p:hover .p-image {
+    transform: translateY(-100%);
+}
+
+@media screen and (max-width: 480px) {
+    .p {
+      width: 40%;
+      height: 20vh;
+    }
+  }
