--- a/src/components/introduction/intro.css
+++ b/src/components/introduction/intro.css
@@ -70,7 +70,7 @@ height: 100vh;
     height: 100%;
     object-fit: cover;
     position: absolute;
-    bottom: -10px;
+    /* bottom: -10px; */
 }
 
 .i-bg {
